调整目录，修订 bug

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 handy_tools_custom/*
-!handy_tools_custom/handy_example.cmd
+!handy_tools_custom/_example_local.cmd
+!handy_tools_custom/_example_remote.cmd
 path_backup.log
+handy_tools/pathhere.backup.log
